[package]
name = "borsh_multi_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh_0_9 = { package = "borsh", version = "0.9.3" }
borsh_0_10 = { package = "borsh", version = "0.10" }

borsh_custom_derive = { path = "./borsh_custom_derive" }
