[package]
name = "borsh_custom_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
borsh_schema_derive_internal_0_9 = { package = "borsh-schema-derive-internal", version = "0.9.3" }
borsh_schema_derive_internal_0_10 = { package = "borsh-schema-derive-internal", version = "0.10" }

syn = { version = "1", features = [ "full" ] }

proc-macro2 = "1"
